[project]
name = "redditpulse"
version = "0.2.0"
description = "Fetch and analyze Reddit comments on any topic"
requires-python = ">=3.10"
dependencies = [
    "praw>=7.7",
    "vaderSentiment>=3.3",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "streamlit>=1.30",
    "pandas>=2.0",
    "altair>=5.0",
    "sentence-transformers>=2.2",
    "textblob>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
redditpulse = "redditpulse.cli:main"
redditpulse-gui = "redditpulse.gui:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["redditpulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
